<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_register"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:gravity="center|bottom"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_logox"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_t1"
            android:textColor="@color/font_white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:text="@string/re_t2"
            android:textSize="18sp"
            android:textColor="@color/font_white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/en_tx"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_tencent"

            />

        <ImageView
            android:id="@+id/en_weibo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_weibo"

            />

        <ImageView
            android:id="@+id/en_weixin"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_weixin"

            />

        <ImageView
            android:id="@+id/en_phone"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_phone"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_t3"
            android:textColor="@color/font_black"
            android:textSize="20sp" />
        <!--跳转注册页面-->
        <TextView
            android:id="@+id/jc_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_t4"
            android:textColor="@color/font_white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_t5"
            android:textColor="@color/font_grey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/jc_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_t6"
            android:textColor="@color/font_white"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/jc_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/shapex"
        android:text="@string/re_t7"
        android:textColor="@color/font_white" />
</LinearLayout>
